--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <title>Bloxoffice</title>
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
     </head>
     <body>
         <div id="root"></div>
