latest ui fixes

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </head>
     <body>
         <div id="root"></div>
@@ -19,5 +20,6 @@
           gtag('js', new Date());
           gtag('config', 'UA-98179082-2');
         </script>
+
     </body>
 </html>
