--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Chicle" rel="stylesheet">
         <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </head>
     <body>
